# Application-management-bot

./: .gitignore  CMakeLists.txt  README.md  build  main.cpp  start.sh
src/: UserContext.hpp  settings.hpp
src/ManagmentBot/: ManagmentBot.cpp  ManagmentBot.hpp
src/configs/: config.hpp
